# ts-semantic-caching

./: README.md  experiment.md
STsCache-json/: CMakeLists.txt
STsCache-json/src/: CMakeLists.txt
STsCache-json/src/cmd/: CMakeLists.txt  defs.h  fc_memcache.cpp  fc_request.cpp  fc_response.cpp
STsCache-json/src/protobuf/: CMakeLists.txt  message.proto
STsCache-json/src/semantic_json/: CMakeLists.txt  semantic_meta_value_json.cpp
STsCache-json/test/: CMakeLists.txt
STsCache-json/test/cjson_test/: CMakeLists.txt
STsCache-json/test/protobuf_test/: message.proto  receiver.cpp  sender.cpp
STsCache-json/test/split_segment_test/: CMakeLists.txt  split_segment_test.cpp
STsCache-protobuf/: LICENSE
STsCache-protobuf/src/: CMakeLists.txt
STsCache-protobuf/src/cmd/: CMakeLists.txt  defs.h  fc.cpp  fc_memcache.cpp  fc_message.h  fc_request.cpp  fc_response.cpp
STsCache-protobuf/src/protobuf/: CMakeLists.txt  message.pb.cc
STsCache-protobuf/test/cjson_test/: cjson_test.cpp
STsCache-protobuf/test/protobuf_test/: CMakeLists.txt  protobuf_test.cpp
STsCache/src/cmd/: fc_memcache.cpp
TSBS4Cache/: go.mod  go.sum
TSBS4Cache/InfluxDB-client/v2/: client.go  convert_json.go  convert_protobuf.go  convert_response.go  example_test.go  merge_response.go  partial_hit_test.go  semantic_segment.go  serialize_test.go  util.go
TSBS4Cache/codec/: codec.pb.go
TSBS4Cache/jsoncodec/: codec.go
TSBS4Cache/protobuf/: codec.pb.go  codec.proto
grafana/: .gitignore  go.mod  go.sum  go.work.sum
grafana/InfluxDB-client/v2/: client.go  (+4 more)
grafana/kindsv2/: go.mod  go.sum
(+34 files in other folders)
